# TDSE-Diffraction

./: README.md  pyproject.toml  requirements.txt
examples/: Paraxial_Triangle_Demo.ipynb  test1.ipynb  triangle_paraxial_cli.py
tdse/: __init__.py  apertures.py  detectors.py  grid.py  grid2d.py  paraxial.py  propagator.py  runner.py  runner2d.py  state.py  units.py
tests/: test_norm.py  test_paraxial.py  test_units.py
